log
Thu, Apr 17, 2025  4:25:20 PM: 
 tests:  0|6
total_score: 0/70
eeef3b7
Thu, Apr 17, 2025  4:32:00 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|5
total_score: 10/70
9d34898
Thu, Apr 17, 2025  4:47:18 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
test.c: In function 'insertMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
e7e3d59
Thu, Apr 17, 2025  4:47:52 PM: 
Compilation failed
test.c: In function 'insertMap':
test.c:453:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:453:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:217:5: error: 'insert_test5' defined but not used [-Werror=unused-function]
 int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
     ^~~~~~~~~~~~
test.c:131:6: error: 'compare_test' defined but not used [-Werror=unused-function]
 void compare_test(){
      ^~~~~~~~~~~~
test.c:125:6: error: 'hash_test3' defined but not used [-Werror=unused-function]
 void hash_test3(){ //no random
      ^~~~~~~~~~
test.c:111:6: error: 'hash_test2' defined but not used [-Werror=unused-function]
 void hash_test2(){ // colisiones
      ^~~~~~~~~~
test.c:100:6: error: 'hash_test1' defined but not used [-Werror=unused-function]
 void hash_test1(){ // posición válida
      ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
4f7736b
Thu, Apr 17, 2025  4:53:44 PM: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  5|4
total_score: 30/70
f3c7683
Thu, Apr 17, 2025  5:20:50 PM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
064cbed
Thu, Apr 17, 2025  5:21:31 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5503625
Thu, Apr 17, 2025  5:22:15 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
b597c7e
Thu, Apr 17, 2025  5:29:58 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  11|2
total_score: 50/70
a8fdbdf
